--- a/MAUIAPP/BarHub.Lib/BarHub.Lib.csproj
+++ b/MAUIAPP/BarHub.Lib/BarHub.Lib.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BarHub.Models\BarHub.Models.csproj" />
   </ItemGroup>
 
