creacion de manageSection

--- a/MAUIAPP/BarHub/BarHub.csproj
+++ b/MAUIAPP/BarHub/BarHub.csproj
@@ -147,6 +147,12 @@
 	  <MauiXaml Update="Pages\Profile\ProfilePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Propietario\CardSection.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Pages\Propietario\ManageSection.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Propietario\OwnerPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
