--- a/MAUIAPP/BarHub/BarHub.csproj
+++ b/MAUIAPP/BarHub/BarHub.csproj
@@ -135,6 +135,9 @@
 	  <MauiXaml Update="Pages\GlobalComponents\BarHubBaseContentPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\Orders\OrdersPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\Waiter\TableDetails.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
